--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       </div>
       <div class="image-container" data-animal="Disgust">
         <img src="https://github.com/Mark2024Eze/Feeling_Kinder/blob/main/negative-facial-expressions-people-concept-unhappy-displeased-young-male-frowns-face-with-discontent-look-feels-aversion-towards-something-gestures-indoor-stands-against-white-wall.jpg?raw=true" alt="Rabbit" class="image">
-        <button class="image-button" data-audio="">🔊</button>
+        <button class="image-button" data-audio="https://res.cloudinary.com/deyhxjgsn/video/upload/v1730235803/luvvoice.com-20241029-pvsG49_asebzu.mp3">🔊</button>
       </div>
       <div class="image-container" data-animal="Surprise">
         <img src="https://github.com/Mark2024Eze/Feeling_Kinder/blob/main/portrait-young-excited-woman-scream-from-joy-happiness-looking-left-empty-space-gasping-fascinated-standing-white-background.jpg?raw=true" alt="Dog" class="image">
